# backup-checker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_rust.yml
pkgbuild/: .SRCINFO  PKGBUILD
src/: banner.rs  main.rs
