[package]
name = "backup-checker"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
sha256 = { version="1.5.0", optional = true }
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.10.0"
owo-colors = "4"
crc32fast = "1.4.2"

[features]
default = []
sha256 = ["dep:sha256"]
