[package]
name = "backup-checker"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.10.0"
owo-colors = "4"
serde = { version = "1.0", features = ["derive"] }
crc32fast = "1.4.2"
sha256 = { version="1", optional = true }
adler32 = { version="1", optional = true }
md5 = { version="0", optional = true }

[features]
default = ["sha256", "adler32", "md5"]
sha256 = ["dep:sha256"]
adler32 = ["dep:adler32"]
md5 = ["dep:md5"]
